# docker-testbed

./: Readme.md
ci_testbed/: docker-compose.yml  populate.py
ci_testbed/project_template/SampleProject/: .gitlab-ci.yml  SampleProfile.txt  conanfile.txt  generateFixedVersions.py  uploadEverything.py
ci_testbed/project_template/ci-templates/: buildAndPublish.yml  component-build.yml  meta-build.yml  metabuild.yml  project-build.yml  publish.yml
ci_testbed/project_template/conan-config_prerelease/: remotes.txt
ci_testbed/project_template/conan-config_release/: remotes.txt
ci_testbed/project_template/concatlib/: .gitlab-ci.yml  CMakeLists.txt  checkVersion.py  conanfile.py  generator.cpp
ci_testbed/project_template/concatlib/concatlib/: generator.h
ci_testbed/project_template/demo-meta/: .gitlab-ci.yml  conanfile.py  conanfile.txt  generateFixedVersions.py  uploadEverything.py
ci_testbed/project_template/foobarlib/: .gitlab-ci.yml  CMakeLists.txt  conanfile.py  generator.cpp
ci_testbed/project_template/foobarlib/foobarlib/: generator.h
ci_testbed/project_template/generateApp/: .gitlab-ci.yml  CMakeLists.txt  conanfile.txt  main.cpp
ci_testbed/project_template/hellolib/: .gitlab-ci.yml  CMakeLists.txt  Readme.md  checkDependencies.py  conanfile.py  generator.cpp  hello.cpp
ci_testbed/project_template/hellolib/hellolib/: generator.h
ci_testbed/project_template/leetlib/: .gitlab-ci.yml  CMakeLists.txt  conanfile.py  generator.cpp
ci_testbed/project_template/leetlib/leetlib/: generator.h
